--- a/bc.csproj
+++ b/bc.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="1.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="nlog" Version="4.7.0" />
     <PackageReference Include="ObjectDumper" Version="1.0.0.12" />
     <Reference Include="System.Web.Services" />
